[gd_scene load_steps=9 format=3 uid="uid://2klabotp2kbt"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_7b8vk"]
[ext_resource type="Texture2D" uid="uid://c48ygxgcbhea" path="res://sprites/shit/gui.png" id="2_bngdt"]
[ext_resource type="FontFile" uid="uid://ckklruywi4tw4" path="res://fonts/joystix monospace.otf" id="2_q4uvn"]
[ext_resource type="PackedScene" uid="uid://qxrclfgtkyyh" path="res://scenes/Settings.tscn" id="5_2eljm"]
[ext_resource type="Texture2D" uid="uid://j7ilkad0cwl1" path="res://sprites/maps/gr√∂n.png" id="6_77ysf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_awg15"]
texture = ExtResource("2_bngdt")
region_rect = Rect2(0, 16, 64, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ch0a"]
texture = ExtResource("2_bngdt")
region_rect = Rect2(0, 32, 64, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7wnk8"]
texture = ExtResource("2_bngdt")
region_rect = Rect2(0, 0, 64, 16)
modulate_color = Color(1, 1, 1, 0.352941)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7b8vk")

[node name="play" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -5.0
offset_right = -258.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_q4uvn")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxTexture_awg15")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8ch0a")
theme_override_styles/normal = SubResource("StyleBoxTexture_7wnk8")
text = "Play"

[node name="settings" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = 45.0
offset_right = -258.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_q4uvn")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxTexture_awg15")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8ch0a")
theme_override_styles/normal = SubResource("StyleBoxTexture_7wnk8")
text = "Settings"

[node name="exit" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = 95.0
offset_right = -258.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_q4uvn")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxTexture_awg15")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8ch0a")
theme_override_styles/normal = SubResource("StyleBoxTexture_7wnk8")
text = "Exit"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Sprite2D" parent="NinePatchRect"]
visible = false
z_index = -15
position = Vector2(1.5, 43.5)
scale = Vector2(66.242, 100)
texture = ExtResource("6_77ysf")

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect"]
texture_filter = 2
layout_mode = 2
offset_left = -473.0
offset_top = 251.0
offset_right = -220.0
offset_bottom = 264.0
theme_override_fonts/normal_font = ExtResource("2_q4uvn")
theme_override_font_sizes/normal_font_size = 10
text = "Copyright (C) 2024 Nico Rajala
"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="Settings" parent="." instance=ExtResource("5_2eljm")]
z_index = 10
layout_mode = 1

[connection signal="button_down" from="play" to="." method="_on_StartButton_pressed"]
[connection signal="button_down" from="settings" to="." method="_on_SettingsButton_pressed"]
[connection signal="button_down" from="exit" to="." method="_on_Exit_pressed"]
